tests/negative/invalid_utf8.far
fun Çmain() { return 0 }
